crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/009.cypher
CREATE (a:Foo {name: 'Alice'}); MATCH (b) RETURN b
